# tiralabra-RSA

./: .gitignore  .pylintrc  README.md  pyproject.toml
docs/: specification.md  week1.md  week2.md
src/: index.py  key.py  ui.py
src/tests/: test_utils.py
src/utils/: prime_generator.py  utils.py
